--- a/config.example.yaml
+++ b/config.example.yaml
@@ -13,6 +13,7 @@ app:
   session_secure: false
   session_http_only: false
   api_prefix: "/api"
+  frontend_pay_url: "http://localhost:3000/pay"
 
 # OAuth2
 oauth2:
