--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -32,13 +32,13 @@ jobs:
       - name: Build Go Binary (multi-arch)
         run: |
           # build amd64 binary
-          GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -o pay-server-amd64 main.go
+          GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -o credit-server-amd64 main.go
 
           # build arm64 binary
-          GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go build -o pay-server-arm64 main.go
+          GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go build -o credit-server-arm64 main.go
 
           # show binaries
-          ls -alh pay-server-*
+          ls -alh credit-server-*
 
       # set up docker buildx
       - name: Set up Docker Buildx
